minor fix for color contrast accessibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,8 @@
 :root {
   /* Base Colors */
   --c-black: #05091e;
-  --c-light-gray: #f8f8f8;
-  --c-gray: #767676;
+  --c-light-gray: #f9f9f9;
+  --c-gray: #717171;
   --c-dark-gray: #4d4d4d;
   --c-white: #fff;
   --c-dark-blue: #115fb8;
